@@ -464,6 +464,10 @@ void read_config(char *filename)
 		atoms[i].neigh[k].nr = j;
 		atoms[i].neigh[k].r = r;
 		atoms[i].neigh[k].dist = dd;
+#ifdef DIPOLE
+	atoms[i].neigh[k].r3 = r*r*r;
+	atoms[i].neigh[k].r5 = r*r*atoms[i].neigh[k].r3;
+#endif
 #ifdef ADP
 		atoms[i].neigh[k].rdist.x = dd.x * r;
 		atoms[i].neigh[k].rdist.y = dd.y * r;
