@@ -1,3 +1,6 @@
+bzr-20100707
++ third loop in calc_forces_dipole
+
 bzr-20100705
 + splines for tail of coulomb-potential
 
